--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,6 @@
 {
+    "files.autoSave": "afterDelay",
+    "terminal.integrated.shell.windows": "C:\\WINDOWS\\System32\\cmd.exe",
 	"actionButtons": {
         "defaultColor": "#ff0034", // Can also use string color names.
         "commands": [
@@ -28,6 +30,5 @@
                 "command": "idf.py clean",
             },
         ]
-    },
-    "terminal.integrated.shell.windows": "C:\\WINDOWS\\System32\\cmd.exe"
+    }
 }
