Updated debug tasks

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -2,12 +2,10 @@
 	"isShellCommand": true,
 	"tasks": [
 		{
-			"taskName": "OpenOCD",
-			"suppressTaskName": true,
-			"command": "",
-			"args": [
-				"openocd -f interface/ftdi/esp32_devkitj_v1.cfg -f board/esp-wroom-32.cfg" //-c \"adapter_khz 3000\"
-			]
-		}
+			"label": "OpenOCD",
+			"type": "shell",
+			"isBackground": true,
+			"command": "openocd -f interface/ftdi/esp32_devkitj_v1.cfg -f board/esp-wroom-32.cfg",
+		  }
 	]
 }
