--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -2,20 +2,20 @@
 	"version": "0.1.0",
 	"configurations": [
 		{
+			"type": "gdb",
+			"request": "launch",
 			"name": "OpenOCD Debug",
-            "type": "gdb",
-            "request": "attach",
-			"cwd": "${workspaceRoot}",
-            "executable": "${workspaceRoot}/build/Esp32_debug_template.elf",
-            "target": ":3333",
-			"remote": true,
-			"preLaunchTask": "OpenOCD",
-            "gdbpath": "C:/Program Files/Espressif/ESP-IDF Tools/tools/bin/xtensa-esp32-elf-gdb.exe",
-            "autorun": [
-                "mon reset halt",
-                "flushregs",
-				"break app_main"
+			"target": "${workspaceRoot}/build/${workspaceFolderBasename}.elf",
+			"cwd": "${workspaceFolder}",
+			"gdbpath": "C:/Program Files/Espressif/ESP-IDF Tools/tools/bin/xtensa-esp32-elf-gdb.exe",
+			"autorun": [
+			  "target remote :3333",
+			  "mon reset halt",
+			  "flushregs",
+			  "thb app_main",
+			  "c"
 			],
-		}
+			"preLaunchTask": "OpenOCD",
+		  }
 	]
 }
