--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,6 @@
 {
     "files.autoSave": "afterDelay",
-    "terminal.integrated.shell.windows": "C:\\WINDOWS\\System32\\cmd.exe",
+    "terminal.integrated.shell.windows": "C:\\Windows\\System32\\cmd.exe",
 	"actionButtons": {
         "defaultColor": "#ff0034", // Can also use string color names.
         "commands": [
