--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -1,4 +1,5 @@
-set(COMPONENT_SRCS "main.c")
+file(GLOB template_sources ./*.cpp ./*.c)
+set(COMPONENT_SRCS ${template_sources})
 set(COMPONENT_ADD_INCLUDEDIRS ".")
 
 register_component()
