--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,13 +1,31 @@
 {
 	"version": "0.1.0",
-	"configurations": [
+	"configurations": [	
 		{
-			"name": "OpenOCD Debug",
+			"name": "Flash + Debug",
 			"type": "gdb",
 			"request": "launch",
-			"target": "${workspaceRoot}/build/${workspaceFolderBasename}.elf",
+			"target": "./build/${workspaceFolderBasename}.elf",
 			"cwd": "${workspaceFolder}",
-			"gdbpath": "C:/Program Files/Espressif/ESP-IDF Tools/tools/bin/xtensa-esp32-elf-gdb.exe",
+			"gdbpath": "xtensa-esp32-elf-gdb",
+			"preLaunchTask": "OpenOCD",
+			"autorun": [
+				"target remote :3333",
+				"mon reset halt",
+				"mon program_esp32 ./build/${workspaceFolderBasename}.bin 0x10000",
+				"mon reset halt",
+				"flushregs",
+				"thb app_main",
+				"c"
+			],
+		},
+		{
+			"name": "Debug",
+			"type": "gdb",
+			"request": "launch",
+			"target": "./build/${workspaceFolderBasename}.elf",
+			"cwd": "${workspaceFolder}",
+			"gdbpath": "xtensa-esp32-elf-gdb",
 			"preLaunchTask": "OpenOCD",
 			"autorun": [
 				"target remote :3333",
